load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "cel",
    exports = [
        "//bundle/src/main/java/dev/cel/bundle:cel",
        "//bundle/src/main/java/dev/cel/bundle:cel_factory",
    ],
)

java_library(
    name = "cel_experimental_factory",
    visibility = ["//:internal"],
    exports = [
        "//bundle/src/main/java/dev/cel/bundle:cel_experimental_factory",
    ],
)

java_library(
    name = "environment",
    exports = ["//bundle/src/main/java/dev/cel/bundle:environment"],
)

java_library(
    name = "environment_exception",
    exports = ["//bundle/src/main/java/dev/cel/bundle:environment_exception"],
)

java_library(
    name = "environment_yaml_parser",
    exports = ["//bundle/src/main/java/dev/cel/bundle:environment_yaml_parser"],
)

java_library(
    name = "environment_exporter",
    exports = ["//bundle/src/main/java/dev/cel/bundle:environment_exporter"],
)

java_library(
    name = "cel_impl",
    testonly = 1,
    visibility = ["//:internal"],
    exports = ["//bundle/src/main/java/dev/cel/bundle:cel_impl"],
)
