load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//codelab:__subpackages__"],
)

java_library(
    name = "codelab",
    exports = ["//codelab/src/main/codelab"],
)

java_library(
    name = "solutions",
    exports = ["//codelab/src/main/codelab/solutions"],
)
