load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "extensions",
    exports = ["//extensions/src/main/java/dev/cel/extensions"],
)

java_library(
    name = "strings",
    exports = ["//extensions/src/main/java/dev/cel/extensions:strings"],
)

java_library(
    name = "math",
    exports = ["//extensions/src/main/java/dev/cel/extensions:math"],
)

java_library(
    name = "optional_library",
    exports = ["//extensions/src/main/java/dev/cel/extensions:optional_library"],
)

java_library(
    name = "sets",
    exports = ["//extensions/src/main/java/dev/cel/extensions:sets"],
)
