load("@rules_java//java:defs.bzl", "java_library")
load("//:cel_android_rules.bzl", "cel_android_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "extensions",
    exports = ["//extensions/src/main/java/dev/cel/extensions"],
)

java_library(
    name = "extension_library",
    exports = ["//extensions/src/main/java/dev/cel/extensions:extension_library"],
)

java_library(
    name = "lite_extensions",
    visibility = ["//:internal"],
    exports = ["//extensions/src/main/java/dev/cel/extensions:lite_extensions"],
)

cel_android_library(
    name = "lite_extensions_android",
    exports = ["//extensions/src/main/java/dev/cel/extensions:lite_extensions_android"],
)

java_library(
    name = "strings",
    exports = ["//extensions/src/main/java/dev/cel/extensions:strings"],
)

java_library(
    name = "math",
    exports = ["//extensions/src/main/java/dev/cel/extensions:math"],
)

java_library(
    name = "optional_library",
    exports = ["//extensions/src/main/java/dev/cel/extensions:optional_library"],
)

java_library(
    name = "sets",
    exports = ["//extensions/src/main/java/dev/cel/extensions:sets"],
)

java_library(
    name = "sets_function",
    exports = ["//extensions/src/main/java/dev/cel/extensions:sets_function"],
)

java_library(
    name = "comprehensions",
    exports = ["//extensions/src/main/java/dev/cel/extensions:comprehensions"],
)
