load("@rules_java//java:java_library.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = [":legacy_users"],
)

# See go/cel-java-migration-guide. This package is not accepting new clients.
package_group(
    name = "legacy_users",
    packages = [
        "//third_party/java/cel/legacy/...",
    ],
)

java_library(
    name = "async_runtime",
    exports = ["//third_party/java/cel/legacy/java/dev/cel/legacy/runtime/async"],
)

java_library(
    name = "dummy_async_context",
    testonly = 1,
    exports = ["//third_party/java/cel/legacy/java/dev/cel/legacy/runtime/async:dummy_async_context"],
)
