package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],  # TODO: Expose to public
)

java_library(
    name = "optimizer",
    exports = ["//optimizer/src/main/java/dev/cel/optimizer"],
)

java_library(
    name = "optimizer_builder",
    exports = ["//optimizer/src/main/java/dev/cel/optimizer:optimizer_builder"],
)

java_library(
    name = "ast_optimizer",
    exports = ["//optimizer/src/main/java/dev/cel/optimizer:ast_optimizer"],
)

java_library(
    name = "optimizer_impl",
    testonly = 1,
    visibility = ["//optimizer/src/test/java/dev/cel/optimizer:__pkg__"],
    exports = ["//optimizer/src/main/java/dev/cel/optimizer:optimizer_impl"],
)
