load("@rules_java//java:defs.bzl", "java_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "parser",
    visibility = ["//:internal"],
    exports = ["//parser/src/main/java/dev/cel/parser"],
)

java_library(
    name = "parser_factory",
    exports = ["//parser/src/main/java/dev/cel/parser:parser_factory"],
)

java_library(
    name = "parser_builder",
    exports = ["//parser/src/main/java/dev/cel/parser:parser_builder"],
)

java_library(
    name = "unparser_visitor",
    exports = ["//parser/src/main/java/dev/cel/parser:unparser_visitor"],
)

java_library(
    name = "macro",
    exports = ["//parser/src/main/java/dev/cel/parser:macro"],
)

java_library(
    name = "operator",
    exports = ["//parser/src/main/java/dev/cel/parser:operator"],
)

java_library(
    name = "cel_g4_visitors",
    visibility = ["//:internal"],
    exports = ["//parser/src/main/java/dev/cel/parser/gen:cel_g4_visitors"],
)

java_library(
    name = "unparser",
    exports = ["//parser/src/main/java/dev/cel/parser:unparser"],
)
